# Server_updata

./: readme.md  更新服务器.md
project/_vscode/: c_cpp_properties.json  tasks.json
project/client/: CMakeLists.txt  client.ini  client_log.txt  main.c
project/client/project/: Game  Music
project/server/: CMakeLists.txt  main.c  server.ini  server_log.txt
